--- a/react/package.json
+++ b/react/package.json
@@ -15,9 +15,13 @@
     "@mui/material": "^5.16.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.10.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.7.2",
+    "firebase": "^9.17.1",
+    "firebase-tools": "^11.23.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "styled-components": "^6.1.11"
