--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:4dh2ButVDlH7qWmIf1K2Swq8OvAn0p/qKfce2PhNY+w=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
