--- a/react/package.json
+++ b/react/package.json
@@ -17,9 +17,11 @@
     "@mui/x-charts": "^7.10.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "firebase": "^9.17.1",
     "firebase-tools": "^11.23.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
